--- a/latex_source/capitolo3.tex
+++ b/latex_source/capitolo3.tex
@@ -16,7 +16,7 @@ Il principio fisico per il quale è possibile effettuare una misura è stato des
     \caption{Risultato finale del misuratore realizzato}
     \label{fotorisfin}
   \end{center}
-\end{figure}\\
+\end{figure}
 La Figura \ref{fotorisfin} mostra il risultato finale del misuratore progettato e realizzato per questo lavoro di Tesi. Dalla figura si possono distinguere le tre parti principali che compongono lo strumento:
 \begin{itemize}
 	\item \underline{Parte analogica}: La parte analogica è costituita da una sezione ottica e una sezione analogica. La sezione ottica è composta dal package della sorgente laser, che comprende: laser, fotodiodo e lente collimatrice. La sezione analogica comprende il circuito di alimentazione del laser e gli stadi di condizionamento e amplificazione del segnale interferometrico generato dal fotodiodo.
