--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -86,6 +86,7 @@
 \renewcommand{\headrulewidth}{0.3pt} 
 
 \include{appendiceA}
+\include{appendiceB}
 
 % ---- Bibliography ----
 \addcontentsline{toc}{chapter}{Bibliografia}
