--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -488,3 +488,8 @@
 	Publisher = {Pearson Education},
 	Title = {Electronics: A Systems Approach},
 	Year = {2009}}
+
+@url{sourceforge,
+	Date-Added = {2015-11-12 16:05:04 +0000},
+	Date-Modified = {2015-11-12 16:05:16 +0000},
+	Title = {https://sourceforge.net/projects/sco-board/}}
