--- a/latex_source/bibl_tesi.bib
+++ b/latex_source/bibl_tesi.bib
@@ -492,4 +492,4 @@
 @url{sourceforge,
 	Date-Added = {2015-11-12 16:05:04 +0000},
 	Date-Modified = {2015-11-12 16:05:16 +0000},
-	Title = {https://sourceforge.net/projects/sco-board/}}
+	Title = {http://sco-board.sourceforge.net/}}
