--- a/latex_source/capitolo1.tex
+++ b/latex_source/capitolo1.tex
@@ -6,7 +6,6 @@
 
 \section{Principi di funzionamento del laser}
 LASER \'e l'acronimo di \emph{Light Amplification by Stimulated Emission of Radiation}, cio\'e luce amplificata dall'emissione stimolata di radiazione~\cite{sveltolaser}. In generale, un laser \'e un dispositivo elettronico in grado di emettere un fascio di luce.
-%Un fascio di luce \'e un'onda elettromagnetica costituita da particelle chiamate fotoni. Il fotone \'e il quanto di energia della radiazione elettromagnetica.
 La luce ha una natura duale; infatti si comporta sia come un'onda elettromagnetica che come una particella, detta fotone, che costituisce il quanto di energia della luce. 
 
 Il fascio di luce emesso da un dispositivo laser possiede tre caratteristiche principali:
@@ -18,8 +17,7 @@ Il fascio di luce emesso da un dispositivo laser possiede tre caratteristiche pr
 
 Un onda \'e coerente spaziale se esiste una differenza di fase costante tra due punti qualunque sul fronte d'onda. Mentre, la coerenza temporale \'e strettamente legata al tempo di coerenza. Esso \'e l'intervallo medio di tempo nel quale l'onda compir\'a un certo numero di oscillazioni prima di cambiare fase.
 
-La seconda propriet\'a garantisce che %(tutti i fotoni generati)
-tutte le onde generate per effetto dell'emissione stimolata risultino iso-frequenziali, ovvero aventi tutti la stessa frequenza. Essa \'e strettamente correlata alla coerenza temporale.
+La seconda propriet\'a garantisce che tutte le onde generate per effetto dell'emissione stimolata risultino iso-frequenziali, ovvero aventi tutti la stessa frequenza. Essa \'e strettamente correlata alla coerenza temporale.
 
 La terza e ultima propriet\'a, invece, afferma che la radiazione emessa dalla sorgente si propaga nello spazio in un'unica direzione ben definita con piccoli angoli di divergenza del fascio parallelo e perpendicolare, pi\'u precisamente, l'angolo solido sotteso da un fascio laser \'e estremamente piccolo. Essa \'e strettamente correlata alla coerenza spaziale.
 
