--- a/latex_source/tesi.tex
+++ b/latex_source/tesi.tex
@@ -85,8 +85,11 @@
 \fancyhead[LO]{\bfseries\rightmark}     
 \renewcommand{\headrulewidth}{0.3pt} 
 
+% Documentazione Driver SCO Board
 \include{appendiceA}
-\include{appendiceB}
+
+% Documentazione SW
+%\include{appendiceB}
 
 % ---- Bibliography ----
 \addcontentsline{toc}{chapter}{Bibliografia}
@@ -95,8 +98,3 @@
 %\nocite{*}
 
 \end{document}
-
-
-
-
-
